[package]
name = "nihongo"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls", "compression"] }
log = "0.4"
pretty_env_logger = "0.4"